--- a/intelliji/src/main/resources/application.properties
+++ b/intelliji/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.1.11}:3306/iot20
+spring.datasource.username=iot20
+spring.datasource.password=iot20SuperPassword2021SuperGroup
